# rust-program-cha

./: .gitignore  Cargo.toml  LEARNING_PATH.md  PROJECT_OVERVIEW.md  README.md  REDUNDANCY_ANALYSIS.md  REFACTORING_STATUS.md  plan.readme.md  refs_borrowing_analysis.md  refs_borrowing_in_depth_analysis.md
.cargo/: config.toml
01-fundamentals/basic-concepts/: .gitignore  Cargo.toml  README.md  RUST_CONCEPTS_GUIDE.md  rust_concepts_examples.rs  rust_struct_enum_pattern_matching.md
01-fundamentals/basic-concepts/Rust额外知识点汇总/: Box 智能指针与引用操作详解.md  Box<T>深入解析.md  Rust 所有权.md  Rust 递归链表实现详细解析.md  Rust错误处理不足之处.md  Rust错误处理中的上下文与Backtrace问题.md  Rust错误类型泛型爆炸.md  Rust高级特性详解：结构体、枚举与模式匹配.md  Rust高级特性详解：结构体、枚举与模式匹配2.md  option类型全面解析.md  rust中胖指针 fat-pointer详解.md  各数据内存可视化布局（重构）.md
01-fundamentals/basic-concepts/Rust额外知识点汇总/analysis-guides/: rust_performance_optimization_guide.md
01-fundamentals/basic-concepts/docs/analysis/: ANALYSIS.md  COMPARISON_ANALYSIS.md  REFACTORING_ANALYSIS.md  REFACTORING_SUMMARY.md
01-fundamentals/basic-concepts/examples/: enterprise_version.rs  optimized_version.rs  refactored_version.rs  rust_exercises.rs
01-fundamentals/basic-concepts/src/: enterprise_main.rs  main.rs  optimized_main.rs  refactored_main.rs
01-fundamentals/closure/: Cargo.toml  README.md  SUMMARY.md  rustfmt.toml
01-fundamentals/closure/benches/: closure_performance.rs
01-fundamentals/closure/docs/: CHANGELOG.md  benchmarking-guide.md  concepts-guide.md  language-comparison.md
01-fundamentals/closure/examples/: advanced_patterns.rs  basic_usage.rs
01-fundamentals/closure/exercises/: basics.rs
01-fundamentals/closure/src/: closure_comprehensive_guide.rs  lib.rs  main.rs
01-fundamentals/closure/src/advanced/: closure_with_generics.rs  common_pitfalls.rs  lifetime_deep_dive.rs  mod.rs  real_world_cases.rs  type_system_analysis.rs
01-fundamentals/closure/src/basics/: capture.rs  mod.rs  move_keyword.rs  syntax.rs  types.rs
01-fundamentals/closure/src/examples/: error_handling.rs  iterators.rs  mod.rs  practical_uses.rs
01-fundamentals/closure/src/patterns/: async_patterns.rs  combinators.rs  functional.rs  mod.rs
01-fundamentals/closure/src/performance/: benchmarking.rs  best_practices.rs  mod.rs  optimization.rs
01-fundamentals/closure/src/traits/: dispatch.rs  fn_traits.rs  mod.rs  trait_hierarchy.rs
03-data-structures/: Rust Hashing Cheat Sheet.md
03-data-structures/composite-type/tuple/: Cargo.toml  README.md
03-data-structures/composite-type/tuple/src/: exercises.rs  main.rs  tuple_comprehensive.rs
04-advanced-concepts/functional-programming/Closure/: Cargo.toml  README.md
04-advanced-concepts/functional-programming/Closure/examples/: advanced_patterns.rs  basic_usage.rs  concurrency_example.rs  performance_optimization.rs
04-advanced-concepts/functional-programming/Closure/src/: advanced.rs  applications.rs  basics.rs  capture.rs  concurrency.rs  lib.rs  main.rs  parameters.rs  performance.rs  pitfalls.rs  traits.rs  types.rs
04-advanced-concepts/response-macro/: ARCHITECTURE.md  Cargo.toml  EXAMPLE_USAGE.md  README.md
04-advanced-concepts/response-macro-advanced/: Cargo.toml  README.md
04-advanced-concepts/response-macro-advanced/src/: main.rs
04-advanced-concepts/response-macro-advanced/src/handlers/: mod.rs  user.rs
04-advanced-concepts/response-macro-advanced/src/models/: error.rs  mod.rs  user.rs
04-advanced-concepts/response-macro-advanced/src/services/: db.rs  mod.rs  user.rs
04-advanced-concepts/response-macro-core/: Cargo.toml  simple_test
04-advanced-concepts/response-macro-core/src/: lib.rs  main.rs  simple_test.rs  test_fix.rs
04-advanced-concepts/response-macro/src/: lib.rs
04-advanced-concepts/response-macro/tests/: integration.rs  unit.rs
05-concurrency-async/async-programming/Solutions-to-some-difficult-problems/: Cargo.toml
05-concurrency-async/async-programming/Solutions-to-some-difficult-problems/src/: main.rs
05-concurrency-async/async-programming/asyncAwait-streamProcessing/: Cargo.toml
05-concurrency-async/async-programming/asyncAwait-streamProcessing/src/: main.rs
05-concurrency-async/async-programming/multipleFutures/: Cargo.toml
05-concurrency-async/async-programming/multipleFutures/src/: main.rs
06-memory-management/cyclic-references/Weakreferences-CircularReferences/: Cargo.toml  README.md
06-memory-management/cyclic-references/Weakreferences-CircularReferences/src/: main.rs
07-performance-optimization/eq-partial-eq/: Cargo.toml  README.md
07-performance-optimization/eq-partial-eq/benches/: eq_partialeq_bench.rs
07-performance-optimization/eq-partial-eq/src/: basic_concepts.rs  best_practices.rs  collections_usage.rs  common_types.rs  custom_types.rs  edge_cases.rs  implementation_examples.rs  main.rs  performance.rs  testing.rs  trait_definitions.rs
07-performance-optimization/move-copy-clone/: Cargo.toml  README.md
07-performance-optimization/move-copy-clone/benches/: performance_bench.rs
07-performance-optimization/move-copy-clone/src/: clone_trait.rs  comparison.rs  copy_trait.rs  edge_cases.rs  lib.rs  main.rs  move_semantics.rs  performance.rs  practical_examples.rs
07-performance-optimization/move-copy-clone/tests/: integration_tests.rs
07-performance-optimization/raw-pointers-references-smart-pointers/: Cargo.toml  README.md
07-performance-optimization/raw-pointers-references-smart-pointers/benches/: pointer_benchmarks.rs
07-performance-optimization/raw-pointers-references-smart-pointers/examples/: all_examples.rs
07-performance-optimization/raw-pointers-references-smart-pointers/src/: comparison.rs  lib.rs  performance.rs  practical_examples.rs  raw_pointers.rs  references.rs  safety_analysis.rs  smart_pointers.rs
07-performance-optimization/scope-lifetime-nll/: Cargo.toml  README.md  THEORY.md
07-performance-optimization/scope-lifetime-nll/benches/: scope_lifetime_benchmarks.rs
07-performance-optimization/scope-lifetime-nll/src/: best_practices.rs  comparison.rs  edge_cases.rs  lib.rs  lifetime.rs  main.rs  nll.rs  practical_examples.rs  scope.rs
(+258 files in other folders)
