[package]
name = "closure"
version = "0.2.0"
edition = "2021"
authors = ["Rust Learners"]
description = "Rust 闭包深度学习库"
license = "MIT"

[lib]
name = "closure"
path = "src/lib.rs"

[[bin]]
name = "closure"
path = "src/main.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_patterns"
path = "examples/advanced_patterns.rs"

[[bin]]
name = "basics_exercise"
path = "exercises/basics.rs"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "closure_performance"
path = "benches/closure_performance.rs"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
