[package]
name = "response-macro-advanced"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
actix-cors = "0.6.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
log = "0.4.20"
env_logger = "0.10.0"
tokio = { version = "1.32.0", features = ["full"] }
thiserror = "1.0.49"
response-macro = { path = "../response-macro" }
chrono = "0.4.31"
num_cpus = "1.16.0"

[dev-dependencies]
actix-rt = "2.9.0"