[package]
name = "response-macro-core"
version = "0.1.0"
description = "Core types and utilities for response-macro"
authors = []
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
log = "0.4"

[features]
schema = ["schemars"]

[dependencies.schemars]
version = "0.8"
optional = true