[package]
name = "response-macro"
version = "0.1.0"
description = "A macro library for simplifying HTTP response handling in Actix Web"
authors = []
edition = "2021"


[lib]
proc-macro = true

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
proc-macro-error = "1.0"
tokio = { version = "1.0", features = ["time"] }
response-macro-core = { path = "../response-macro-core" }

[build-dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[features]
default = ["json", "error-handling", "trace"]
json = ["serde_json"]
error-handling = []
trace = []
schema = ["schemars", "response-macro-core/schema"]

[dependencies.schemars]
version = "0.8"
optional = true
