[package]
name = "raw-pointers-references-smart-pointers"
version = "0.1.0"
edition = "2021"
authors = ["Rust Learning Course"]
description = "深度解析 Rust 中的裸指针、引用和智能指针"
keywords = ["rust", "pointers", "references", "smart-pointers", "memory"]
categories = ["development-tools", "memory-management"]
license = "MIT"
readme = "README.md"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
once_cell = "1.19"
parking_lot = "0.12"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pointer_benchmarks"
harness = false

[lib]
name = "raw_pointers_references_smart_pointers"
path = "src/lib.rs"
