[package]
name = "Solutions-to-some-difficult-problems"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"

# Pin 和自引用相关
pin-project = "1.1"
pin-project-lite = "0.2"
pin-utils = "0.1"

# 异步 trait 支持
async-trait = "0.1"
async-recursion = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 序列化和反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 网络和HTTP
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 随机数生成
rand = "0.8"

# 数据库连接池（模拟）
deadpool = "0.9"

# 流处理
futures-util = "0.3"
tokio-stream = "0.1"
