[package]
name = "asyncAwait-streamProcessing"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-std = "1.12"
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
